in galleris grid - images get cropped to keep aspect ratio and prevent stretching

--- a/src/layout/_section-galleria.scss
+++ b/src/layout/_section-galleria.scss
@@ -20,8 +20,18 @@ h2 {
 
   img {
     width: 100%;
-    min-height: 100%;
+    height: 160px;
+    object-fit: cover; // to get image cropped and keep cell's aspect ratio
     transition: 500ms all ease-in-out;
+    cursor: pointer;
+
+    @include min-media(mobile) {
+      height: 200px;
+    }
+
+    @include min-media(laptop) {
+      height: 220px;
+    }
   }
 }
 
